# game

./: .gitignore  CMakeLists.txt  OPENGL game.code-workspace  README.md
src/: CMakeLists.txt  auto_release.h  camera.cpp  camera.h  colour.h  entity.cpp  entity.h  error.h  event.h  exception.cpp  exception.h  key.h  key_event.cpp  key_event.h  log.h  main.cpp  material.cpp  material.h  matrix4.h  mesh.cpp  mesh.h  notes.md  opengl.h  renderer.cpp  renderer.h  scene.h  shader.cpp  shader.h  stop_event.h  vector3.h  vertex_data.h  window.cpp  window.h
tests/: CMakeLists.txt  matrix4_tests.cpp  vector3_tests.cpp
